--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "razorpay": "^2.9.4",
+    "sha256": "^0.2.0",
     "stripe": "^16.8.0",
     "validator": "^13.12.0"
   }
