--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -1,3 +1,7 @@
+# Rate limiting zones
+limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
+
 # Frontend configuration
 server {
     listen 80;
@@ -36,6 +40,7 @@ server {
 server {
     listen 80;
     server_name api.jjtextiles.com;
+    client_max_body_size 50M;
 
     # Security headers
     add_header X-Frame-Options "DENY";
@@ -54,14 +59,28 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 60s;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
 
         # Rate limiting
         limit_req zone=api_limit burst=20 nodelay;
         limit_req_status 429;
     }
 
-    # Rate limiting zones
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+    # Stricter rate limiting for login endpoints
+    location ~ ^/api/user/(login|admin) {
+        proxy_pass http://localhost:4010;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Stricter rate limiting for auth
+        limit_req zone=login_limit burst=5 nodelay;
+        limit_req_status 429;
+    }
 }
 
 # Admin panel configuration
