--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,19 @@
 !frontend/src/
 !frontend/src/**/*
 
+# Allow admin source files
+!admin/src/
+!admin/src/**/*
+
+# Allow admin config files
+!admin/package.json
+!admin/package-lock.json
+!admin/vite.config.js
+!admin/tailwind.config.js
+!admin/postcss.config.js
+!admin/index.html
+!admin/README.md
+
 # Allow deployment files
 !deployment/
 !deployment/**/*
