--- a/backendV2/package.json
+++ b/backendV2/package.json
@@ -36,6 +36,7 @@
     "sharp": "^0.33.2",
     "uuid": "^13.0.0",
     "validator": "^13.12.0",
+    "winston": "^3.11.0",
     "zod": "^3.24.1"
   }
 }
