--- a/backendV2/package.json
+++ b/backendV2/package.json
@@ -31,8 +31,10 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.4",
+    "pdfkit": "^0.15.0",
     "pg-sdk-node": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-sdk-node/releases/v2/phonepe-pg-sdk-node.tgz",
     "redis": "^4.6.14",
+    "redlock": "^5.0.0-beta.2",
     "sharp": "^0.33.2",
     "uuid": "^13.0.0",
     "validator": "^13.12.0",
